--- a/scss/index/_header.scss
+++ b/scss/index/_header.scss
@@ -1,5 +1,4 @@
 .header {
-    margin: 25px var(--margins);
     display: flex;
     justify-content: space-between;
     position: fixed;
@@ -12,15 +11,15 @@
         column-gap: 5px;
 
         img {
-            width: var(--logo);
-            height: var(--logo);
+            width: 40px;
+            height: 40px;
         }
 
         span {
             font-family: Poppins;
             font-style: normal;
             font-weight: bold;
-            font-size: var(--px25);
+            font-size: 25px;
         }
     }
 
@@ -28,15 +27,15 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: var(--bg);
-        padding: var(--logo-button-padding);
+        background-color: $bg;
+        padding: 25px;
         border-radius: 100%;
         transition: 0.5s;
         cursor: pointer;
 
         img {
-            width: var(--logo-button-size);
-            height: var(--logo-button-size);
+            width: 25px;
+            height: 25px;
         }
 
         &:hover {
