--- a/css/index/index.css
+++ b/css/index/index.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 .header {
-  margin: 25px var(--margins);
   display: flex;
   justify-content: space-between;
   position: fixed;
@@ -13,28 +12,28 @@
   column-gap: 5px;
 }
 .header__logo img {
-  width: var(--logo);
-  height: var(--logo);
+  width: 40px;
+  height: 40px;
 }
 .header__logo span {
   font-family: Poppins;
   font-style: normal;
   font-weight: bold;
-  font-size: var(--px25);
+  font-size: 25px;
 }
 .header__button {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--bg);
-  padding: var(--logo-button-padding);
+  background-color: #FFF59E;
+  padding: 25px;
   border-radius: 100%;
   transition: 0.5s;
   cursor: pointer;
 }
 .header__button img {
-  width: var(--logo-button-size);
-  height: var(--logo-button-size);
+  width: 25px;
+  height: 25px;
 }
 .header__button:hover {
   border-radius: 0%;
@@ -45,14 +44,20 @@
   transform: translateY(200px);
 }
 
+.container {
+  margin: 0 auto;
+  padding: 15px;
+  max-width: 1200px;
+}
+
 .main {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .main img {
-  width: var(--main-orange-width);
-  height: var(--main-orange-height);
+  width: 645px;
+  height: 495px;
 }
 .main .main-text {
   display: flex;
@@ -60,21 +65,20 @@
   flex-direction: column;
 }
 .main .main-text img {
-  width: var(--main-bg-decor-size);
-  height: var(--main-bg-decor-size);
+  width: 185px;
+  height: 185px;
 }
 .main .main-text__title {
   font-family: Poppins;
   font-style: normal;
   font-weight: bold;
-  font-size: var(--px40);
-  line-height: var(--px40);
-  color: var(--title);
-  width: var(--main-title-width);
-  background-image: url("img/background_dot.svg");
+  font-size: 40px;
+  line-height: 40px;
+  color: #14142B;
+  width: 330px;
 }
 .main .main-text .arrow-button {
-  background-color: var(--bg);
+  background-color: #FFF59E;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -82,38 +86,23 @@
   column-gap: 5px;
   width: 45%;
   padding: 10px;
-  margin-top: var(--px150);
+  margin-top: 150px;
   transition: 0.8s;
 }
 .main .main-text .arrow-button span {
   font-family: Poppins;
   font-style: normal;
   font-weight: normal;
-  font-size: var(--px16);
+  font-size: 16px;
 }
 .main .main-text .arrow-button img {
-  width: var(--arrow-button-arrow-width);
-  height: var(--arrow-button-arrow-height);
+  width: 26px;
+  height: 26px;
 }
 
-:root {
-  --px25: 25px;
-  --px40: 40px;
-  --px16: 16px;
-  --px150: 150px;
-  --margins: 100px;
-  --logo: 41px;
-  --logo-button-padding: 25px;
-  --logo-button-size: 26px;
-  --bg: #FFF59E;
-  --title: #14142B;
-  --main-orange-width: 645px;
-  --main-orange-height: 495px;
-  --main-bg-decor-size: 185px;
-  --arrow-button-arrow-width: 26px;
-  --arrow-button-arrow-height: 26px;
-  --arrow-button-padding-top: 10px;
-  --main-title-width: 330px;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
