--- a/scss/index/_header.scss
+++ b/scss/index/_header.scss
@@ -1,10 +1,12 @@
 .header {
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
     position: fixed;
     width: 90%;
 
     &__logo {
+        margin-left: 50px;
         cursor: pointer;
         display: flex;
         align-items: center;
@@ -32,6 +34,7 @@
         border-radius: 100%;
         transition: 0.5s;
         cursor: pointer;
+        width: 3%;
 
         img {
             width: 25px;
