--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -11,6 +11,7 @@ $title: #14142B;
 @import './wrapper';
 @import '../container';
 @import './main';
+@import './components';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 * {
