--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -12,6 +12,7 @@ $title: #14142B;
 @import '../container';
 @import './main';
 @import './components';
+@import './filter';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 * {
