--- a/scss/index/_components.scss
+++ b/scss/index/_components.scss
@@ -8,9 +8,14 @@
     margin-top: 110px;
 }
 
+.line {
+    margin: 50px 0;
+}
+
 .arrow-button {
     display: flex;
     align-items: center;
+    justify-content: center;
     column-gap: 10px;
     transition: 0.8s;
     padding: 10px 20px;
@@ -20,6 +25,12 @@
     font-size: 18px;
     line-height: 28px;
     cursor: pointer;
+    width: 50%;
+
+    img {
+        width: 26px;
+        height: 10px;
+    }
 
     &:hover {
         transform: scale(1.01);
