--- a/scss/index/_header.scss
+++ b/scss/index/_header.scss
@@ -4,6 +4,7 @@
     justify-content: space-between;
     position: fixed;
     width: 90%;
+    z-index: 100;
 
     &__logo {
         margin-left: 50px;
