--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -6,6 +6,7 @@
 
 $bg: #FFF59E;
 $title: #14142B;
+$money: #00BA88;
 
 @import './header';
 @import './wrapper';
@@ -13,6 +14,7 @@ $title: #14142B;
 @import './main';
 @import './components';
 @import './filter';
+@import './cards';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 * {
