--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -15,6 +15,7 @@ $money: #00BA88;
 @import './components';
 @import './filter';
 @import './cards';
+@import './footer';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 * {
