--- a/css/index/index.css
+++ b/css/index/index.css
@@ -6,6 +6,7 @@
   position: fixed;
   width: 90%;
   z-index: 100;
+  flex-wrap: wrap;
 }
 .header__logo {
   margin-left: 50px;
@@ -54,6 +55,50 @@
   padding: 0 15px;
 }
 
+@media screen and (max-width: 1199px) {
+  .container {
+    max-width: 1000px;
+  }
+
+  .to-arrow {
+    text-align: center;
+    margin-top: 110px;
+    max-width: 750px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .container {
+    max-width: 720px;
+  }
+
+  .to-arrow {
+    text-align: center;
+    margin-top: 110px;
+    max-width: 700px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .container {
+    max-width: 540px;
+  }
+
+  .to-arrow {
+    text-align: center;
+    margin-top: 110px;
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .container {
+    max-width: 100%;
+  }
+
+  .to-arrow {
+    text-align: center;
+    margin-top: 110px;
+    max-width: 500px;
+  }
+}
 .main {
   display: flex;
   justify-content: center;
@@ -87,6 +132,8 @@
 .to-arrow {
   text-align: center;
   margin-top: 110px;
+  width: 2%;
+  height: 135px;
 }
 
 .line {
@@ -128,12 +175,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .filter .categorys {
   display: flex;
   justify-content: center;
   align-items: center;
   column-gap: 20px;
+  margin-bottom: 40px;
+  margin-left: 60px;
 }
 .filter .categorys .citem {
   background-color: white;
@@ -377,6 +427,29 @@
 .cards .card .final__button-selected img {
   width: 46px;
   height: 20px;
+}
+
+.footer {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.footer__title {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: bold;
+  color: #14142B;
+  font-size: 32px;
+  line-height: 34px;
+}
+.footer__subtitle {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  color: #b8b8b8;
+  font-size: 25px;
+  line-height: 32px;
 }
 
 * {
