--- a/scss/index/_filter.scss
+++ b/scss/index/_filter.scss
@@ -3,12 +3,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 
     .categorys {
         display: flex;
         justify-content: center;
         align-items: center;
         column-gap: 20px;
+        margin-bottom: 40px;
+        margin-left: 60px;
 
         .citem {
             background-color: white;
